selected faces in paint modes dont display properly #47332

Closed
opened 2016-02-05 11:58:51 +01:00 by item412 · 9 comments

System Information
win7 64

Blender Version
Broken: 2.76.9 da7ddb6
Worked: (optional)

Short description of error
in vertex and texture paint mode selected faces look like they are masked and only 1 or 2 have proper brightness

Exact steps for others to reproduce the error
1.create cube
2.switch to wireframe shading
3.enter to vertex paint mode
4.press M then A to select all faces

**System Information** win7 64 **Blender Version** Broken: 2.76.9 da7ddb6 Worked: (optional) **Short description of error** in vertex and texture paint mode selected faces look like they are masked and only 1 or 2 have proper brightness **Exact steps for others to reproduce the error** 1.create cube 2.switch to wireframe shading 3.enter to vertex paint mode 4.press M then A to select all faces
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @item412

Added subscriber: @item412

Added subscriber: @mont29

Added subscriber: @mont29

Please follow our submission template and guidelines and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.
Also, screen shots could help here.

Please follow our submission template and guidelines and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc. Also, screen shots could help here.
Author

2.76.4 df6264f selected faces are white, expected behavior
38f7ee4b5b830feaba76922957c1c61a.png

2.76.9 da7ddb6 same selected faces
07a4002a630fd50449fdab68d7b97c46.png

Fmask.blend

2.76.4 df6264f selected faces are white, expected behavior ![38f7ee4b5b830feaba76922957c1c61a.png](https://archive.blender.org/developer/F280224/38f7ee4b5b830feaba76922957c1c61a.png) 2.76.9 da7ddb6 same selected faces ![07a4002a630fd50449fdab68d7b97c46.png](https://archive.blender.org/developer/F280227/07a4002a630fd50449fdab68d7b97c46.png) [Fmask.blend](https://archive.blender.org/developer/F280229/Fmask.blend)
Campbell Barton self-assigned this 2016-02-09 18:46:33 +01:00

Bisected to d346ed3b10 (will investigate tomorrow unless someone else fixes :) )

Bisected to d346ed3b10 (will investigate tomorrow unless someone else fixes :) )

Have a fix for this but discovered a related bug... will try resolve both before committing.

Have a fix for this but discovered a related bug... will try resolve both before committing.

This issue was referenced by 8e85ef1c7d

This issue was referenced by 8e85ef1c7df509d0abd8ec9b8766f149d6c3a1cc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47332
No description provided.