Fix T47332: Face select masks display glitch